# fileshare

./: .dockerignore  .eslintrc.js  .gitignore  Cargo.toml  askama.toml  build.rs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: generate-changelog.yml  push-docker-image.yml
docker/: Dockerfile  docker-compose.yml
frontend/templates/: upload.html
frontend/ts/: upload.ts
migrations/2025-09-23-063910_fileshare/: up.sql
src/: api_error.rs  lib.rs  main.rs
src/database/: mod.rs  postgresql.rs  schemas.rs
src/database/models/: uploads.rs
src/routes/: generate_upload.rs  get_upload.rs  give_upload.rs  mod.rs  upload.rs
src/utils/: files.rs  logger.rs  mod.rs  templates.rs
